Modify title style and color in qr_code.html
Updated the title style and color, enhancing visual appeal.

--- a/qr_code.html
+++ b/qr_code.html
@@ -11,8 +11,8 @@
       top: 45%;
       width: 100%;
       text-align: center;
-      color: white;
-      font-size: 2rem;
+      color: pink;
+      font-size: 5rem;
       font-family: 'Comic Sans MS', cursive;
       text-shadow: 0 0 15px pink;
     }
@@ -105,3 +105,4 @@
   </script>
 </body>
 </html>
+
